# SDL_learing

./: CMakeLists.txt  Header.h  Source.cpp  build.sh  compile.sh  main.cpp  paths.h
